hotfix:(navbar):Solves menulist layout issues

--- a/src/css/Acerca.module.css
+++ b/src/css/Acerca.module.css
@@ -17,7 +17,7 @@
 
 .title {
   font-family: 'Karla', sans-serif;
-  font-size: 6.5rem;
+  font-size: 5.5rem;
   animation-name: title;
   animation-duration: 5s;
   animation-iteration-count: infinite;
