--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -98,8 +98,9 @@
   }
 
   .menulist {
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin: 0 auto;
+    width: 100%;
   }
 
   .menulist li {
